--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0",
-    "node-sass": "^5.0.0"
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
     "@mate-academy/eslint-config-react": "*",
